# variant

./: .gitmodules  CMakeLists.txt  MyVariant.7z  README.MD  main.cpp
include/: variant.hpp
lib/googletest-master/googlemock/scripts/: fuse_gmock_files.py
lib/googletest-master/googlemock/src/: gmock-spec-builders.cc
lib/googletest-master/googletest/scripts/: common.py  fuse_gtest_files.py  release_docs.py
test/: CMakeLists.txt  MyVariantTest.cpp
